helm-values/harbor/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-core-route
  namespace: harbor
spec:
  parentRefs:
  - name: greencap-gateway
    namespace: default
    sectionName: web
  hostnames:
  - "core.harbor.greencap"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/
    - path:
        type: PathPrefix
        value: /c/
    - path:
        type: PathPrefix
        value: /service/
    - path:
        type: PathPrefix
        value: /v2/
    - path:
        type: PathPrefix
        value: /chartrepo/
    backendRefs:
    - name: harbor-core
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: harbor-portal
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-notary-route
  namespace: harbor
spec:
  parentRefs:
  - name: greencap-gateway
    namespace: default
    sectionName: web
  hostnames:
  - "notary.harbor.greencap"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: harbor-notary-server
      port: 4443
